corrected bug that was not including white spaces for tweets

--- a/public/styles/tweet-feed.css
+++ b/public/styles/tweet-feed.css
@@ -30,6 +30,7 @@
   font-weight: 600;
   padding: 1em;
   word-wrap: break-word;
+  white-space: pre-wrap;
   width: 100%;
 }
 
